# lambdatestproject

./: README.md  conftest.py  pyproject.toml
tests/features/: duckduckgo.feature  login.feature
tests/page_object_model/: items_page.py  login_page.py
tests/step_defs/: test_web_steps.py
